--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My github repo</title>
+    <title>My Simple Website</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Ashraful's Portfolio</h1>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+      suscipit quam voluptatum asperiores maiores nisi quidem repellat neque
+      quasi, quo ducimus odio et impedit vel earum magnam! Soluta, unde porro?
+    </p>
+  </body>
 </html>
